--- a/VRChat/79/1095079.html
+++ b/VRChat/79/1095079.html
@@ -79,7 +79,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "kGAkv6P4xj88R8zbNNC/9qvS2zY5xLp8cQGJQJDbahA="></script>
+    "9jIMk/HphJBryIRlrMZAvzDhuxqzgydeq3UiIk2hoBg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRC花札システム","description":"VRCにアップした花札システムです。\nゲームワールド増えろ！\n単機能にまとめる(シャッフル機構だけとか)めんどくさいので、配布ダメそうなのを除いてそのままupした手抜きです。\n適当に使ってください。\n\n●以下の機能が含まれます。\n・こいこいの役/バカッ花の絵札点の計算シェーダー\n・シェーダーへカード48枚を見分けて値設定可能な VRCトリガー/アニメーション･アニメーターレイヤー･パラメータ･ステート設定/シャッフル機構\n・上記48枚見分けるやつは非常に改変しづらいので利用は覚悟すること(ちょっとだれかもっと賢い方法あったら教えて)\n・3D花札カード。それに使ってる、重なっても半透明特有の前後入れ替わりが起きずZバッファ計算するために、ワールド用にバカっぽい感じでやっつけた窓枠シェーダー\n・各場カメラの設定\n・寛永通宝と丁銀(ワンドロ)\n\n●以下の機能は含まれません\n・カード内の動物(アセットストアのものとかのため)\n・背景画像(あの金色屏風)\n・説明ボード画像\n・その他VRCSDKとか標準アセットとか系諸々","url":"https://booth.pm/ja/items/1095079","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/55e0ade6-1a8a-42bf-b4f4-91cc5bdbb5ca/i/1095079/fe460618-2685-4853-9bbb-501fb3072ba7_base_resized.jpg"}
     </script>
@@ -93,7 +93,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="kGAkv6P4xj88R8zbNNC/9qvS2zY5xLp8cQGJQJDbahA="></script>
+    nonce="9jIMk/HphJBryIRlrMZAvzDhuxqzgydeq3UiIk2hoBg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -373,9 +373,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
