--- a/VRChat/63/1094963.html
+++ b/VRChat/63/1094963.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "9MGjLuacDGjNSJMqP6d7bRXn/lxaXO8V+xS30DEB99A="></script>
+    "CO23m6ZVa99gvV44qanWjfh7iXqjGtPjkjUbfN81tMY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ミニナル","description":"ミニナルだよ！\narktoonシェーダーを使ったVRC用のセットアップ済みUnityPackage形式だよ！シェーダーは未同梱！","url":"https://booth.pm/ja/items/1094963","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/a7137b00-b4ea-4679-a5bd-dc626e07566a/i/1094963/dc79a728-d3b1-4661-a92c-fae4c9f0b69f_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="9MGjLuacDGjNSJMqP6d7bRXn/lxaXO8V+xS30DEB99A="></script>
+    nonce="CO23m6ZVa99gvV44qanWjfh7iXqjGtPjkjUbfN81tMY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -349,9 +349,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
