--- a/VRChat/44/1093544.html
+++ b/VRChat/44/1093544.html
@@ -79,7 +79,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "ZS04mZhonErdXQkRqtB8lkx+v0y7qWCi96lDyHrqn4Y="></script>
+    "vjBfe2TFVtSb+WoDX+sn5bhGJDpwGL4zkEp67EArWjs="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"麻雀牌「北」","description":"麻雀牌の北です。VRChatなどでの使用を想定しています。\n\nポリゴン数：60\n\n商用・私的利用などご自由にお使いください　改造可\n\n\n","url":"https://booth.pm/ja/items/1093544","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/9a05bd42-3027-4d3a-8df6-055a7ed44526/i/1093544/2cb3166f-dda5-4aa4-84c0-2e057043d620_base_resized.jpg"}
     </script>
@@ -93,7 +93,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="ZS04mZhonErdXQkRqtB8lkx+v0y7qWCi96lDyHrqn4Y="></script>
+    nonce="vjBfe2TFVtSb+WoDX+sn5bhGJDpwGL4zkEp67EArWjs="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -334,9 +334,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
