--- a/VRChat/51/1092651.html
+++ b/VRChat/51/1092651.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "O0PvS0akIv5P1kfcTtvC5QILb/XwwKyw8fsXHO4iiss="></script>
+    "CL8CKSCZtB093DxWIam0oVzWbbDGPMkj+Oi1d+IwEhg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オカメインコもどき","description":"鳥族第二弾、オカメインコもどきです。\n\n各種テクスチャが登場いたしました！\nそれに伴いパッケージ内容を一新しました。詳しくはアップデート内容をご確認ください。\n実際の見た目はバーチャルマーケット2のブースにて垣間見ることができます。\n\n参考画像の瞳は固定ではなく、表示の一例となります。\n詳しくは下記の詳細にて。\n\n\n\n★利用規約・導入などの説明はこちらをご覧ください。（ページ下部から該当シートを選んでください）\nhttps://docs.google.com/spreadsheets/d/1DCh-S5Rafb_NYJTQHtXame5xNWiDTWg5RKkcSiIdyXA/edit?usp=sharing","url":"https://booth.pm/ja/items/1092651","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"300","highPrice":"1300"},"image":"https://booth.pximg.net/c/620x620/42ee0553-4a9c-4ab5-8673-ebcc9fd6f0be/i/1092651/a6c259e5-cecd-40eb-a462-a55bf89a690b_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="O0PvS0akIv5P1kfcTtvC5QILb/XwwKyw8fsXHO4iiss="></script>
+    nonce="CL8CKSCZtB093DxWIam0oVzWbbDGPMkj+Oi1d+IwEhg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -1188,9 +1188,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
