--- a/VRChat/75/1092275.html
+++ b/VRChat/75/1092275.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "eobJhLvo1hgXun95O6CI9xiY1CFnzikf4dP4l4QJOeM="></script>
+    "IHNbSwffYqOzaWC4r+25VMkNM/uFjjXqGJ0RKSeJ2rI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"揺れる油揚げ　ダイナミックボーン設定済み","description":"■VRchat等で使用することを想定して作られた油揚げです\n\n■ダイナミックボーンの設定を予めしておきました\n\n■ガバが目立ちます\n\n■ポリゴン数：768\n\n■細かいことVRchat推奨　改造可　商用利用可　\n\n■禁止事項：自作発言（改造品含む）\n\n※本製品は油揚げのみです。右近ちゃんや神社は付属しません。","url":"https://booth.pm/ja/items/1092275","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/565e6dcd-600c-4884-8a13-2faabbfd8cdf/i/1092275/f7f858a1-eeda-4e88-bd55-adf526b06a9d_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="eobJhLvo1hgXun95O6CI9xiY1CFnzikf4dP4l4QJOeM="></script>
+    nonce="IHNbSwffYqOzaWC4r+25VMkNM/uFjjXqGJ0RKSeJ2rI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -405,9 +405,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
